[project]
name = "robust-input"
version = "1.0.1"
description = "A very comprehensive terminal input module with no external dependencies"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "tkirkland", email = "tkirkland@users.noreply.github.com" },
]
keywords = ["input", "terminal", "validation", "cli", "command-line"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
